--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,4 @@
+/*
 .App {
   text-align: center;
 }
@@ -35,4 +36,62 @@
   to {
     transform: rotate(360deg);
   }
+}
+*/
+
+* {
+  box-sizing: border-box;
+}
+body {
+  display: flex;
+  min-height: 100vh;
+}
+
+.contedenor-slider {
+  width: 500px;
+  max-width: 900px;
+  margin: auto;
+  overflow: hidden;
+  position: relative;
+}
+
+.slider {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  height: 400px;
+  width: 400%;
+  margin-left: -100%;
+}
+.seccion-slider {
+  width: 100%;
+}
+.slider-img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.slider-boton {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  background: rgba(255, 255, 255, 0.7);
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 30px;
+  font-weight: bold;
+  font-family: monospace;
+  text-align: center;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.slider-boton:hover {
+  background: #fff;
+}
+.slider-boton-derecha {
+  right: 10px;
+}
+.slider-boton-izquierda {
+  left: 10px;
 }
