--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -43,13 +43,13 @@
   box-sizing: border-box;
 }
 body {
-  display: flex;
+  display: flexbox;
   min-height: 100vh;
 }
 
 .contedenor-slider {
-  width: 500px;
-  max-width: 900px;
+  width: 60vw;
+  max-width: 90vw;
   margin: auto;
   overflow: hidden;
   position: relative;
@@ -59,7 +59,7 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  height: 400px;
+  height: 40vw;
   width: 400%;
   margin-left: -100%;
 }
@@ -67,7 +67,7 @@ body {
   width: 100%;
 }
 .slider-img {
-  display: block;
+  display: inline-block;
   width: 100%;
   height: 100%;
   object-fit: cover;
