--- a/my-app/src/componentes/nav.css
+++ b/my-app/src/componentes/nav.css
@@ -35,3 +35,22 @@
   position: absolute;
   left: 1em;
 }
+#login {
+  position: absolute;
+  bottom: 0%;
+  right: 30%;
+  width: 40vw;
+}
+#iconoLogin {
+  font-size: 2.4em;
+  color: white;
+  position: relative;
+  right: -31vw;
+  top: 1.2em;
+}
+#texto {
+  color: white;
+  position: relative;
+  left: 31vw;
+  bottom: -2.4em;
+}
