--- a/my-app/src/componentes/nav.css
+++ b/my-app/src/componentes/nav.css
@@ -40,6 +40,7 @@
   bottom: 0%;
   right: 30%;
   width: 40vw;
+  cursor: pointer;
 }
 #iconoLogin {
   font-size: 2.4em;
@@ -53,4 +54,10 @@
   position: relative;
   left: 31vw;
   bottom: -2.4em;
+}
+#deslogearse {
+  color: white;
+  position: relative;
+  left: 31vw;
+  bottom: -4.4em;
 }
